--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google-cloud/vision": "^5.3.3",
+    "@googlemaps/js-api-loader": "^1.16.10",
     "express": "^5.1.0"
   }
 }
